--- a/FilterBuilder.csproj
+++ b/FilterBuilder.csproj
@@ -61,6 +61,7 @@
         <Compile Include="Enums\ConditionOperator.cs" />
         <Compile Include="Enums\EffectColor.cs" />
         <Compile Include="Enums\EffectShape.cs" />
+        <Compile Include="Enums\RarityCondition.cs" />
         <Compile Include="Filter\Filter.cs" />
         <Compile Include="Filter\FilterBlock.cs" />
         <Compile Include="Filter\FilterCondition.cs" />
