--- a/FilterBuilder.csproj
+++ b/FilterBuilder.csproj
@@ -76,8 +76,10 @@
         <Compile Include="Helper\AlertSound.cs" />
         <Compile Include="Helper\BeamEffect.cs" />
         <Compile Include="Helper\EqualityCondition.cs" />
-        <Compile Include="Helper\RBGAColor.cs" />
+        <Compile Include="Helper\Color.cs" />
+        <Compile Include="Helper\FontSize.cs" />
         <Compile Include="Helper\MinimapIcon.cs" />
+        <Compile Include="Helper\ValueCondition.cs" />
         <Compile Include="MainWindow.xaml.cs">
             <DependentUpon>MainWindow.xaml</DependentUpon>
             <SubType>Code</SubType>
