Navigation with all 16 tabs.

--- a/FilterBuilder.csproj
+++ b/FilterBuilder.csproj
@@ -80,7 +80,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Enum\Page.cs" />
+    <Compile Include="Enum\View.cs" />
     <Compile Include="Enum\Tag.cs" />
     <Compile Include="Enum\EqualityOperator.cs" />
     <Compile Include="Enum\EffectColor.cs" />
@@ -98,16 +98,73 @@
     <Compile Include="Helper\FontSize.cs" />
     <Compile Include="Helper\MinimapIcon.cs" />
     <Compile Include="Helper\ValueCondition.cs" />
+    <Compile Include="Interfaces\INavigationViewModel.cs" />
     <Compile Include="Service\LocatorService.cs" />
+    <Compile Include="ViewModel\ChanceBaseViewModel.cs" />
+    <Compile Include="ViewModel\CraftingBaseViewModel.cs" />
+    <Compile Include="ViewModel\CurrencyViewModel.cs" />
+    <Compile Include="ViewModel\DivinationCardViewModel.cs" />
+    <Compile Include="ViewModel\EssenceViewModel.cs" />
+    <Compile Include="ViewModel\FlaskViewModel.cs" />
+    <Compile Include="ViewModel\FossilViewModel.cs" />
+    <Compile Include="ViewModel\FragmentViewModel.cs" />
     <Compile Include="ViewModel\HomeViewModel.cs" />
+    <Compile Include="ViewModel\LevelingViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
-    <Compile Include="ViewModel\UniqueViewModel.cs" />
+    <Compile Include="ViewModel\MapViewModel.cs" />
+    <Compile Include="ViewModel\SkillGemViewModel.cs" />
+    <Compile Include="ViewModel\UniqueAccessoryViewModel.cs" />
+    <Compile Include="ViewModel\UniqueArmourViewModel.cs" />
+    <Compile Include="ViewModel\UniqueWeaponViewModel.cs" />
+    <Compile Include="ViewModel\VendorRecipeViewModel.cs" />
+    <Compile Include="View\ChanceBaseView.xaml.cs">
+      <DependentUpon>ChanceBaseView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\CraftingBaseView.xaml.cs">
+      <DependentUpon>CraftingBaseView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\CurrencyView.xaml.cs">
+      <DependentUpon>CurrencyView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\DivinationCardView.xaml.cs">
+      <DependentUpon>DivinationCardView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\EssenceView.xaml.cs">
+      <DependentUpon>EssenceView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\FlaskView.xaml.cs">
+      <DependentUpon>FlaskView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\FossilView.xaml.cs">
+      <DependentUpon>FossilView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\FragmentView.xaml.cs">
+      <DependentUpon>FragmentView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\HomeView.xaml.cs" />
+    <Compile Include="View\LevelingView.xaml.cs">
+      <DependentUpon>LevelingView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="View\UniqueView.xaml.cs" />
+    <Compile Include="View\MapView.xaml.cs">
+      <DependentUpon>MapView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\SkillGemView.xaml.cs">
+      <DependentUpon>SkillGemView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\UniqueAccessoryView.xaml.cs">
+      <DependentUpon>UniqueAccessoryView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\UniqueArmourView.xaml.cs">
+      <DependentUpon>UniqueArmourView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\UniqueWeaponView.xaml.cs" />
+    <Compile Include="View\VendorRecipeView.xaml.cs">
+      <DependentUpon>VendorRecipeView.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -127,17 +184,28 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Model" />
-  </ItemGroup>
-  <ItemGroup>
+    <Page Include="View\ChanceBaseView.xaml" />
+    <Page Include="View\CraftingBaseView.xaml" />
+    <Page Include="View\CurrencyView.xaml" />
+    <Page Include="View\DivinationCardView.xaml" />
+    <Page Include="View\EssenceView.xaml" />
+    <Page Include="View\FlaskView.xaml" />
+    <Page Include="View\FossilView.xaml" />
+    <Page Include="View\FragmentView.xaml" />
+    <Page Include="View\LevelingView.xaml" />
     <Page Include="View\MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="View\VendorRecipeView.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="View\HomeView.xaml" />
-    <Page Include="View\UniqueView.xaml" />
+    <Page Include="View\MapView.xaml" />
+    <Page Include="View\SkillGemView.xaml" />
+    <Page Include="View\UniqueAccessoryView.xaml" />
+    <Page Include="View\UniqueArmourView.xaml" />
+    <Page Include="View\UniqueWeaponView.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\Currency.png" />
@@ -155,6 +223,13 @@
     <Resource Include="Resources\Images\UniqueAccessory.png" />
     <Resource Include="Resources\Images\UniqueArmour.png" />
     <Resource Include="Resources\Images\UniqueWeapon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Flask.png" />
+    <Resource Include="Resources\Images\Fragment.png" />
+    <Resource Include="Resources\Images\Leveling.png" />
+    <Resource Include="Resources\Images\SkillGem.png" />
+    <Resource Include="Resources\Images\VendorRecipe.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
