--- a/FilterBuilder.csproj
+++ b/FilterBuilder.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Helper\Color.cs" />
     <Compile Include="Helper\FontSize.cs" />
     <Compile Include="Helper\MinimapIcon.cs" />
+    <Compile Include="Helper\Release.cs" />
     <Compile Include="Helper\ValueCondition.cs" />
     <Compile Include="Interfaces\IFilterCategory.cs" />
     <Compile Include="Interfaces\INavigationViewModel.cs" />
@@ -242,6 +243,7 @@
     <Resource Include="Resources\Images\VendorRecipe.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
