--- a/ItemFilterBuilder.csproj
+++ b/ItemFilterBuilder.csproj
@@ -1,15 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="packages\Microsoft.Net.Compilers.3.0.0\build\Microsoft.Net.Compilers.props" Condition="Exists('packages\Microsoft.Net.Compilers.3.0.0\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{19BD4382-8F22-44CA-BFCD-A5B9878BD72C}</ProjectGuid>
+    <ProjectGuid>{A13EC289-6BF3-4114-9510-A0B7DEB0E73B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>FilterBuilder</RootNamespace>
-    <AssemblyName>FilterBuilder</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>ItemFilterBuilder</RootNamespace>
+    <AssemblyName>ItemFilterBuilder</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -36,44 +35,60 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonServiceLocator, Version=2.0.2.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0">
-      <HintPath>packages\CommonServiceLocator.2.0.2\lib\net45\CommonServiceLocator.dll</HintPath>
+      <HintPath>..\packages\CommonServiceLocator.2.0.2\lib\net47\CommonServiceLocator.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="GalaSoft.MvvmLight, Version=5.4.1.0, Culture=neutral, PublicKeyToken=e7570ab207bcb616">
-      <HintPath>packages\MvvmLightLibs.5.4.1.1\lib\net45\GalaSoft.MvvmLight.dll</HintPath>
+      <HintPath>..\packages\MvvmLightLibs.5.4.1.1\lib\net45\GalaSoft.MvvmLight.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="GalaSoft.MvvmLight.Extras, Version=5.4.1.0, Culture=neutral, PublicKeyToken=669f0b5e8f868abf">
-      <HintPath>packages\MvvmLightLibs.5.4.1.1\lib\net45\GalaSoft.MvvmLight.Extras.dll</HintPath>
+      <HintPath>..\packages\MvvmLightLibs.5.4.1.1\lib\net45\GalaSoft.MvvmLight.Extras.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="GalaSoft.MvvmLight.Platform, Version=5.4.1.0, Culture=neutral, PublicKeyToken=5f873c45e98af8a1">
-      <HintPath>packages\MvvmLightLibs.5.4.1.1\lib\net45\GalaSoft.MvvmLight.Platform.dll</HintPath>
+      <HintPath>..\packages\MvvmLightLibs.5.4.1.1\lib\net45\GalaSoft.MvvmLight.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.IO, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\packages\System.IO.4.3.0\lib\net462\System.IO.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Net.Http, Version=4.1.1.3, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <HintPath>packages\System.Net.Http.4.3.4\lib\net46\System.Net.Http.dll</HintPath>
+      <HintPath>..\packages\System.Net.Http.4.3.4\lib\net46\System.Net.Http.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Security.Cryptography.Algorithms, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <HintPath>packages\System.Security.Cryptography.Algorithms.4.3.1\lib\net461\System.Security.Cryptography.Algorithms.dll</HintPath>
+    <Reference Include="System.Runtime, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\packages\System.Runtime.4.3.0\lib\net462\System.Runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Security.Cryptography.X509Certificates, Version=4.1.1.2, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <HintPath>packages\System.Security.Cryptography.X509Certificates.4.3.2\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
+    <Reference Include="System.Security.Cryptography.Algorithms, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\packages\System.Security.Cryptography.Algorithms.4.3.0\lib\net463\System.Security.Cryptography.Algorithms.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-      <HintPath>packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
+    <Reference Include="System.Security.Cryptography.Encoding, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\packages\System.Security.Cryptography.Encoding.4.3.0\lib\net46\System.Security.Cryptography.Encoding.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Security.Cryptography.Primitives, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\packages\System.Security.Cryptography.Primitives.4.3.0\lib\net46\System.Security.Cryptography.Primitives.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Security.Cryptography.X509Certificates, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.3.0\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
+      <HintPath>..\packages\MvvmLightLibs.5.4.1.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml" />
@@ -89,20 +104,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Enum\View.cs" />
-    <Compile Include="Enum\Tag.cs" />
-    <Compile Include="Enum\EqualityOperator.cs" />
     <Compile Include="Enum\EffectColor.cs" />
     <Compile Include="Enum\EffectShape.cs" />
+    <Compile Include="Enum\EqualityOperator.cs" />
     <Compile Include="Enum\Rarity.cs" />
+    <Compile Include="Enum\Tag.cs" />
+    <Compile Include="Enum\View.cs" />
     <Compile Include="Helper\AlertSound.cs" />
     <Compile Include="Helper\BeamEffect.cs" />
-    <Compile Include="Helper\EqualityCondition.cs" />
     <Compile Include="Helper\Color.cs" />
+    <Compile Include="Helper\EqualityCondition.cs" />
     <Compile Include="Helper\FontSize.cs" />
     <Compile Include="Helper\MinimapIcon.cs" />
     <Compile Include="Helper\Release.cs" />
@@ -151,9 +162,14 @@
     <Compile Include="View\FragmentView.xaml.cs">
       <DependentUpon>FragmentView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\HomeView.xaml.cs" />
+    <Compile Include="View\HomeView.xaml.cs">
+      <DependentUpon>HomeView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\LevelingView.xaml.cs">
       <DependentUpon>LevelingView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\WindowView.xaml.cs">
+      <DependentUpon>WindowView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\MapView.xaml.cs">
       <DependentUpon>MapView.xaml</DependentUpon>
@@ -167,13 +183,33 @@
     <Compile Include="View\UniqueArmourView.xaml.cs">
       <DependentUpon>UniqueArmourView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\UniqueWeaponView.xaml.cs" />
+    <Compile Include="View\UniqueWeaponView.xaml.cs">
+      <DependentUpon>UniqueWeaponView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\VendorRecipeView.xaml.cs">
       <DependentUpon>VendorRecipeView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\WindowView.xaml.cs">
-      <DependentUpon>WindowView.xaml</DependentUpon>
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\ChanceBaseView.xaml" />
+    <Page Include="View\CraftingBaseView.xaml" />
+    <Page Include="View\CurrencyView.xaml" />
+    <Page Include="View\DivinationCardView.xaml" />
+    <Page Include="View\EssenceView.xaml" />
+    <Page Include="View\FlaskView.xaml" />
+    <Page Include="View\FossilView.xaml" />
+    <Page Include="View\FragmentView.xaml" />
+    <Page Include="View\HomeView.xaml" />
+    <Page Include="View\LevelingView.xaml" />
+    <Page Include="View\WindowView.xaml" />
+    <Page Include="View\MapView.xaml" />
+    <Page Include="View\SkillGemView.xaml" />
+    <Page Include="View\UniqueAccessoryView.xaml" />
+    <Page Include="View\UniqueArmourView.xaml" />
+    <Page Include="View\UniqueWeaponView.xaml" />
+    <Page Include="View\VendorRecipeView.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -191,57 +227,26 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="View\ChanceBaseView.xaml" />
-    <Page Include="View\CraftingBaseView.xaml" />
-    <Page Include="View\CurrencyView.xaml" />
-    <Page Include="View\DivinationCardView.xaml" />
-    <Page Include="View\EssenceView.xaml" />
-    <Page Include="View\FlaskView.xaml" />
-    <Page Include="View\FossilView.xaml" />
-    <Page Include="View\FragmentView.xaml" />
-    <Page Include="View\LevelingView.xaml" />
-    <Page Include="View\VendorRecipeView.xaml" />
-    <Page Include="View\WindowView.xaml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="View\HomeView.xaml" />
-    <Page Include="View\MapView.xaml" />
-    <Page Include="View\SkillGemView.xaml" />
-    <Page Include="View\UniqueAccessoryView.xaml" />
-    <Page Include="View\UniqueArmourView.xaml" />
-    <Page Include="View\UniqueWeaponView.xaml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Images\Currency.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Images\Home.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Images\ChanceBase.png" />
-    <Resource Include="Resources\Images\CraftingBase.png" />
-    <Resource Include="Resources\Images\DivinationCard.png" />
-    <Resource Include="Resources\Images\Essence.png" />
-    <Resource Include="Resources\Images\Fossil.png" />
-    <Resource Include="Resources\Images\Map.png" />
-    <Resource Include="Resources\Images\UniqueAccessory.png" />
-    <Resource Include="Resources\Images\UniqueArmour.png" />
-    <Resource Include="Resources\Images\UniqueWeapon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Images\Flask.png" />
-    <Resource Include="Resources\Images\Fragment.png" />
-    <Resource Include="Resources\Images\Leveling.png" />
-    <Resource Include="Resources\Images\SkillGem.png" />
-    <Resource Include="Resources\Images\VendorRecipe.png" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
-    <Content Include="packages.config" />
+    <Resource Include="Resources\Images\ChanceBase.png" />
+    <Resource Include="Resources\Images\CraftingBase.png" />
+    <Resource Include="Resources\Images\Currency.png" />
+    <Resource Include="Resources\Images\DivinationCard.png" />
+    <Resource Include="Resources\Images\Essence.png" />
+    <Resource Include="Resources\Images\Flask.png" />
+    <Resource Include="Resources\Images\Fossil.png" />
+    <Resource Include="Resources\Images\Fragment.png" />
+    <Resource Include="Resources\Images\Home.png" />
+    <Resource Include="Resources\Images\Leveling.png" />
+    <Resource Include="Resources\Images\Map.png" />
+    <Resource Include="Resources\Images\SkillGem.png" />
+    <Resource Include="Resources\Images\UniqueAccessory.png" />
+    <Resource Include="Resources\Images\UniqueArmour.png" />
+    <Resource Include="Resources\Images\UniqueWeapon.png" />
+    <Resource Include="Resources\Images\VendorRecipe.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-  </Target>
 </Project>
