--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,7 @@
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
