--- a/FilterBuilder.csproj
+++ b/FilterBuilder.csproj
@@ -70,6 +70,10 @@
       <HintPath>packages\System.Net.Http.4.3.4\lib\net46\System.Net.Http.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+      <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -90,6 +94,10 @@
     <Compile Include="Converters\StringToTranslationConverter.cs" />
     <Compile Include="Enum\Language.cs" />
     <Compile Include="Enum\View.cs" />
+    <Compile Include="Helper\Keyboard.cs" />
+    <Compile Include="Helper\KeyboardControl.xaml.cs">
+      <DependentUpon>KeyboardControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Helper\Release.cs" />
     <Compile Include="Service\LocatorService.cs" />
     <Compile Include="Service\TranslatorService.cs" />
@@ -131,6 +139,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Helper\KeyboardControl.xaml" />
     <Page Include="View\CompleteView.xaml" />
     <Page Include="View\PaymentView.xaml" />
     <Page Include="View\RegisterView.xaml" />
