--- a/ParkingApp.csproj
+++ b/ParkingApp.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{19BD4382-8F22-44CA-BFCD-A5B9878BD72C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>FilterBuilder</RootNamespace>
-    <AssemblyName>FilterBuilder</AssemblyName>
+    <RootNamespace>ParkingApp</RootNamespace>
+    <AssemblyName>ParkingApp</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
