--- a/ParkingAppUpdater/ParkingAppUpdater.csproj
+++ b/ParkingAppUpdater/ParkingAppUpdater.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>C:\Users\Noxy\RiderProjects\FilterBuilder\bin\Debug\Updater</OutputPath>
+    <OutputPath>C:\Users\Noxy\RiderProjects\ParkingApp\bin\Debug\Updater</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,7 +26,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>C:\Users\Noxy\RiderProjects\FilterBuilder\bin\Release\Updater</OutputPath>
+    <OutputPath>C:\Users\Noxy\RiderProjects\ParkingApp\bin\Release\Updater</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
